--- a/html/register.html
+++ b/html/register.html
@@ -45,7 +45,7 @@
               <input type="password" id="passwordInputRegister" placeholder="Password" pattern=".*" required>
               <input type="password" id="password2InputRegister" placeholder="Confirm Password" pattern=".*" required>
 
-              <input type="submit" value="Register">
+              <input type="submit" value="Let's Go!">
             </form>
         </section>
 
