--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,8 @@
       </ul>
     </nav>
     <button type="button" class="btn-menu"><span>Menu</span></button>
+    <a class="home-button" href="/login.html">Login!</a>
+    <button type="button" class="btn-menu"><span>Menu</span></button>
     <a class="home-button" href="/register.html">Register!</a>
   </header>
 
