--- a/html/score.html
+++ b/html/score.html
@@ -14,7 +14,8 @@
                 <div class="container">
                         <div class="table-responsive">
                                 <br />
-                                <h1 align="center"><a href="index.html">King of the hill scoreboard</a></h1>
+                                <h1 align="center"><a href="index.html" style="font-family:algerian;font-size:200%;font-weight:bold;color:rgb(255,0,0)">King of the hill</a></h1>
+                                <h2 align="center">Scoreboard</h2>
                                 <h2 align="center"><span id="datetime"></span></h2>
                                 <br />
                                 <div class="col-md-3">
