--- a/html/index.html
+++ b/html/index.html
@@ -14,20 +14,20 @@
 <body class="page-home">
 
   <header class="site-header">
-    <h1 class="title">King of the Hill</h1>
-    <nav class="site-nav">
+   <h1 align="center" style="font-family:algerian;font-size:400%;font-weight:bold;color:rgb(255,0,0)">King of the hill</h1>
+     <nav class="site-nav">
       <ul>
         <li><a href="index.html">Home</a></li>
       </ul>
     </nav>
+  </header>
     <button type="button" class="btn-menu"><span>Menu</span></button>
     <a class="home-button" href="/login.html">Login!</a>
     <button type="button" class="btn-menu"><span>Menu</span></button>
-    <a class="home-button" href="/register.html">Register!</a>
-  </header>
 
   <section class="home-about">
     <div class="row column large-9 xlarge-6 xxlarge-4">
+    <a class="home-button" href="/register.html">Register!</a>
       <h2 class="section-title">How Does This Work?</h2>
       <p class="content">
         Attack or defend?  Why not do both? Register and you will be given a cloud instance to defend.  Using the knowlege gained by defending attack weaknesses in other systems.  Claim system ownership by placing you name in /tmp/OWNERSHIP and /root/OWNERSHIP.  The competitor owning the most systems at the end of the event is KING OF THE HILL!
