--- a/html/register.html
+++ b/html/register.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -35,7 +31,7 @@
         </div>
 
         <header>
-          <img src="images/logo.png">
+    <h1 align="center" style="font-family:algerian;font-size:400%;font-weight:bold;color:rgb(255,0,0)">King of the hill</h1>
         </header>
 
         <section class="form-wrap">
